fix: adjust scrollbar

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -154,7 +154,10 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@layer utilities {
   .scrollbar-gutter-stable {
     scrollbar-gutter: stable;
-  }
-}
+   }
+   }
